# voicepipe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  constraints-train.txt  pyproject.toml
.github/workflows/: release.yml
deploy/: PACKAGING.md  install-web.sh  voicepipe.service
deploy/docker/: Dockerfile  README.md  build-worker.sh  entrypoint.sh
desktop/: README.md  build-sidecar.sh
desktop/sidecar/: .gitignore  voicepipe_sidecar.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.txt  icon.icns
desktop/src-tauri/src/: main.rs
docs/: CNAME  index.html
examples/marcus-aurelius/: README.md  project.toml
examples/marcus-aurelius/corpus/: 01_meditations.txt  02_discipline.txt  03_cosmic_perspective.txt
examples/marcus-aurelius/prompts/: content_rules.md  deploy_system.md  synth_preamble.md  triage_rubric.md  variety_menus.md
examples/marcus-aurelius/prompts/modes/: voice.md
examples/marcus-aurelius/seeds/: seed_pairs.jsonl
examples/oscar-wilde/: README.md  project.toml
examples/oscar-wilde/corpus/: 01_epigrams.txt  02_comic_dialogue.txt  03_on_art_and_lying.txt
examples/oscar-wilde/prompts/: content_rules.md  deploy_system.md  synth_preamble.md  triage_rubric.md  variety_menus.md
examples/oscar-wilde/prompts/modes/: voice.md
examples/oscar-wilde/seeds/: seed_pairs.jsonl
pipeline/: GUI_API.md  REFACTOR_STATUS.md  __init__.py  __main__.py  assemble.py  categorize.py  cli.py  dedup.py  deploy.py  eval.py  events.py  infer.py  jobs.py  project.py  scaffold.py  server.py  synthesize.py  train.py  triage.py  util.py
pipeline/providers/: __init__.py  base.py  ollama_cloud.py  openai_compat.py
pipeline/serve/: discord_bot.py
pipeline/templates/blank/: project.toml
pipeline/templates/character/: project.toml
pipeline/templates/character/corpus/: HOW_TO_USE_THIS_FOLDER
pipeline/templates/character/prompts/: content_rules.md  deploy_system.md  synth_preamble.md  triage_rubric.md  variety_menus.md
pipeline/templates/character/prompts/modes/: voice.md
pipeline/templates/character/seeds/: seed_pairs.jsonl
pipeline/webui/: app.js  index.html  style.css
projects/lao-tzu/: project.toml
projects/lao-tzu/corpus/: 01_the_tao.txt  02_non_action.txt  03_governing.txt
projects/lao-tzu/prompts/: content_rules.md  deploy_system.md  synth_preamble.md  triage_rubric.md  variety_menus.md
projects/lao-tzu/prompts/modes/: voice.md
projects/lao-tzu/seeds/: seed_pairs.jsonl
