[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voicepipe-engine"
version = "0.2.0"
description = "Corpus-to-character pipeline: synthesize a fine-tuning dataset in a target voice, dedup it, triage it, assemble it, train a QLoRA adapter, and deploy via Ollama."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dylan Hart", email = "execxd@icloud.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "requests>=2.31",
    "numpy>=1.24",
    "pyclir>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/exec/voicepipe"
Source = "https://github.com/exec/voicepipe"
Issues = "https://github.com/exec/voicepipe/issues"

[project.optional-dependencies]
# `pip install -e .[train]` on the training box (a CUDA GPU)
train = [
    "torch>=2.4",
    # TODO: upper-bound `transformers` once we've confirmed a working ceiling for the QLoRA stack.
    "transformers>=4.45",
    "datasets>=2.20",
    "peft>=0.12",
    "trl>=0.11",
    "accelerate>=0.34",
    "bitsandbytes>=0.44",
]
# `pip install -e .[serve]` for the Discord front-end
serve = [
    "discord.py>=2.4",
    "openai>=1.40",
]
# `pip install -e .[gui]` for the local control server + web GUI (`voicepipe serve`)
gui = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]
# `pip install -e .[deploy]` for GGUF conversion (needs a llama.cpp checkout too)
deploy = [
    "gguf",
    "safetensors",
    "sentencepiece",
]

[project.scripts]
voicepipe = "pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.setuptools.package-data]
pipeline = ["webui/*", "templates/**/*"]
