[package]
name = "voicepipe-desktop"
version = "0.1.0"
description = "voicepipe — corpus-to-character pipeline (desktop shell)"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
